--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon js/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
